--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "jsonwebtoken": "^8.5.1",
     "mongodb": "^4.8.1",
     "mongoose": "^6.5.0",
+    "nodemailer": "^6.7.7",
     "validate-phone-number-node-js": "^0.0.1",
     "validator": "^13.7.0"
   },
